--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veritone-node",
+  "name": "veritone-node-red",
   "version": "0.0.1",
   "description": "Veritone custom nodes for node-red",
   "dependencies": {
