--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "node-red": {
     "nodes": {
       "event": "node/event.js",
-      "graphql": "node/graphql.js"
+      "graphql": "node/graphql.js",
+      "v2fIn": "node/v2fIn.js"
     }
   }
 }
