--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.18.0",
     "body-parser": "1.18.3",
     "eslint-plugin-lodash": "^3.1.0",
+    "is-utf8": "^0.2.1",
     "lodash": "^4.17.4",
+    "multer": "^1.4.1",
     "mustache": "^2.3.0",
     "superagent": "^4.0.0-beta.5"
   },
