add v2f-in-test node

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
       "structured-data": "node/structured-data.js",
       "engine": "node/engine.js",
       "v2fIn": "node/v2fIn.js",
-      "v2fOut": "node/v2fOut.js"
+      "v2fOut": "node/v2fOut.js",
+      "v2f-in-test": "node/v2f-in-test.js"
     }
   }
 }
