--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "is-utf8": "^0.2.1",
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
-    "superagent": "^4.0.0-beta.5"
+    "superagent": "^4.0.0-beta.5",
+    "@tensorflow-models/posenet": "^2.1.0",
+    "@tensorflow/tfjs": "^1.2.2"
   },
   "keywords": [
     "node-red",
