--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.3",
   "description": "Veritone custom nodes for node-red",
   "dependencies": {
+    "@tensorflow-models/posenet": "^2.1.0",
+    "@tensorflow/tfjs": "^1.2.2",
+    "@tensorflow/tfjs-node": "^1.2.1",
     "axios": "^0.18.0",
     "body-parser": "1.18.3",
+    "canvas": "^2.5.0",
     "eslint-plugin-lodash": "^3.1.0",
+    "is-utf8": "^0.2.1",
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.11",
-    "is-utf8": "^0.2.1",
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
-    "superagent": "^4.0.0-beta.5",
-    "@tensorflow-models/posenet": "^2.1.0",
-    "@tensorflow/tfjs": "^1.2.2"
+    "superagent": "^4.0.0-beta.5"
   },
   "keywords": [
     "node-red",
@@ -31,7 +33,8 @@
       "v2fIn": "node/v2fIn.js",
       "v2fOut": "node/v2fOut.js",
       "v2f-in-test": "node/v2f-in-test.js",
-      "aiware-crud": "node/aiware-crud.js"
+      "aiware-crud": "node/aiware-crud.js",
+      "tensorflow-posenet": "node/tensorflow-posenet.js"
     }
   }
 }
