--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
       "create-tdo": "node/create-tdo.js",
       "structured-data": "node/structured-data.js",
       "engine": "node/engine.js",
-      "v2fIn": "node/v2fIn.js",
-      "v2fOut": "node/v2fOut.js",
+      "v2f-in": "node/v2f-in.js",
+      "v2f-out": "node/v2f-out.js",
       "v2f-in-test": "node/v2f-in-test.js",
       "aiware-crud": "node/aiware-crud.js",
       "tensorflow-posenet": "node/tensorflow-posenet.js"
