--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@tensorflow/tfjs": "^1.2.2",
     "@tensorflow/tfjs-node": "^1.2.1",
     "axios": "^0.18.1",
+    "bluebird": "^3.5.5",
     "body-parser": "1.18.3",
     "canvas": "^2.5.0",
     "eslint-plugin-lodash": "^3.1.0",
     "is-utf8": "^0.2.1",
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.14",
+    "mkdirp": "^0.5.1",
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
     "superagent": "^4.0.0-beta.5"
@@ -34,6 +36,7 @@
       "engine-out": "node/engine-out.js",
       "engine-in-test": "node/engine-in-test.js",
       "aiware-objects": "node/aiware-objects.js",
+      "aiware-clipping": "node/aiware-clipping.js",
       "tensorflow-posenet": "node/tensorflow-posenet.js"
     }
   }
