--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "engine-out": "node/engine-out.js",
       "engine-in-test": "node/engine-in-test.js",
       "aiware-objects": "node/aiware-objects.js",
-      "tensorflow-posenet": "node/tensorflow-posenet.js"
+      "tensorflow-posenet": "node/tensorflow-posenet.js",
+      "upload-file": "node/upload-file.js"
     }
   }
 }
