VTN-26274: create custom postgres node use SSH

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lodash": "^4.17.14",
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
+    "net": "^1.0.2",
+    "pg": "^7.12.1",
+    "ssh2": "^0.8.5",
     "superagent": "^4.0.0-beta.5"
   },
   "keywords": [
@@ -34,7 +37,8 @@
       "engine-out": "node/engine-out.js",
       "engine-in-test": "node/engine-in-test.js",
       "aiware-objects": "node/aiware-objects.js",
-      "tensorflow-posenet": "node/tensorflow-posenet.js"
+      "tensorflow-posenet": "node/tensorflow-posenet.js",
+      "postgres-remote": "node/postgres-remote.js"
     }
   }
 }
