--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mustache": "^2.3.0",
     "pg": "^7.12.1",
     "ssh2": "^0.8.5",
-    "superagent": "^4.0.0-beta.5"
+    "superagent": "^4.0.0-beta.5",
+    "form-data": "^2.5.0"
   },
   "keywords": [
     "node-red",
