--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "body-parser": "1.18.3",
     "canvas": "^2.5.0",
     "eslint-plugin-lodash": "^3.1.0",
+    "form-data": "^2.5.0",
     "is-utf8": "^0.2.1",
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.14",
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
-    "superagent": "^4.0.0-beta.5"
+    "superagent": "^4.0.0-beta.5",
+    "util": "^0.12.1"
   },
   "keywords": [
     "node-red",
