update uploadFileToTDO func

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
     "pg": "^7.12.1",
-    "ssh2": "^0.8.5",
-    "form-data": "^2.5.0"
+    "ssh2": "^0.8.5"
   },
   "keywords": [
     "node-red",
@@ -37,7 +36,8 @@
       "engine-in-test": "node/engine-in-test.js",
       "aiware-objects": "node/aiware-objects.js",
       "tensorflow-posenet": "node/tensorflow-posenet.js",
-      "postgres-remote": "node/postgres-remote.js"
+      "postgres-remote": "node/postgres-remote.js",
+      "media-merging": "node/media-merging.js"
     }
   }
 }
