--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
       "engine-in-test": "node/engine-in-test.js",
       "aiware-objects": "node/aiware-objects.js",
       "tensorflow-posenet": "node/tensorflow-posenet.js",
-      "postgres-remote": "node/postgres-remote.js",
-      "media-merging": "node/media-merging.js"
+      "postgres-remote": "node/postgres-remote.js"
     }
   }
 }
