--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.1",
     "mustache": "^2.3.0",
     "pg": "^7.12.1",
-    "ssh2": "^0.8.5"
+    "ssh2": "^0.8.5",
+    "superagent": "^4.0.0-beta.5"
   },
   "keywords": [
     "node-red",
